Revision history for {{$dist->name}}

{{$NEXT}}

5.012     2014-01-15 09:58:00-05:00 America/New_York
        - when handling a multi-line abstract, fold the lines on whitespace;
          previously, the newlines had been left in, which caused downstream
          warnings

5.011     2014-01-12 16:09:29-05:00 America/New_York
        - ->VERSION is again defined in the tester forms of Builder and Minter
        - remove a small obsolete code path from PkgVersion

5.010     2014-01-11 22:06:04-05:00 America/New_York
        - stop sharing a reference to cached PPI docs, which led to spooky
          action at a distance
        - PkgVersion no longer surrounds the new $VERSION assignment with a
          bare block
        - if there's a blank line after the package statement (and any number
          of comment-only lines), PkgVersion will use that for a $VERSION
          assignment, rather than insert a new line; this can be made mandatory
          with die_on_line_insertion

5.009     2014-01-07 20:21:17-05:00 America/New_York
        - include time offset by default in NextRelease
        - always pass PPI octets, not text

5.008     2013-12-27 21:57:02 America/New_York
        - fix utterly broken `dzil run`

5.007     2013-12-27 20:50:45-05:00 America/New_York
        - add the ability to say "dzil run --no-build" to run a command without
          building inside the dist dir
          (in other words, no `perl Makefile.PL && make`)
        - Archive::Tar::Wrapper added as a recommended prereq
        - fix :ShareFiles (thanks, Christopher J. Madsen and Karen Etheridge)
        - new :AllFiles and :NoFiles filefinders (thanks, Karen Etheridge)
        - most files generated by dzil plugins now self-identify with comments

5.006     2013-11-06 09:21:12 America/New_York
        - add ->is_bytes to files; shortcut for ->encoding eq 'bytes'
          (thanks, David Golden)
        - AutoPrereqs will not try scanning binary files (thanks, David Golden)
