@@ -1,0 +1,48 @@
+use strict;
+use warnings;
+use Test::More 0.88;
+use utf8;
+
+use lib 't/lib';
+
+use autodie;
+use Test::DZil;
+
+my $tzil = Builder->from_config(
+  { dist_root => 'corpus/dist/DZT' },
+  {
+    add_files => {
+      'source/dist.ini' => simple_ini(
+        [
+          'GatherDir::Template' => Dingo => {
+            filename    => 'txt/dingo.txt',
+          }
+        ],
+      ),
+      'source/txt/dingo.txt' => <<'DINGO',
+Welcome to Dingo Kidneys ⽝ {{ $dist->version }}
+Generated by {{ $plugin->VERSION || 0 }}
+DINGO
+    },
+  },
+);
+
+$tzil->build;
+
+{
+  my $contents = $tzil->slurp_file('build/txt/dingo.txt');
+
+  like(
+    $contents,
+    qr{Kidneys ⽝ 0.001\n}sm,
+    'we render $dist stuff into dingo.txt',
+  );
+
+  like(
+    $contents,
+    qr{^Generated by \d}sm,
+    'we render $plugin stuff into dingo.txt',
+  );
+}
+
+done_testing;
